# dTVTerminalApp

dTVTerminalApp/app/: CMakeLists.txt  build.gradle  google-services.json  proguard-rules.pro
dTVTerminalApp/app/keys/: dcmEval20150128.keystore
dTVTerminalApp/app/libs/: dixim-android-activation-lib-debug.aar  dixim-android-activation-lib.aar  dixim-android-player-lib-debug.aar  dixim-android-player-lib.aar  dixim-android-player-secure-nativecodec-debug.aar  dixim-android-player-secure-nativecodec.aar  dixim-android-player-secure-openmaxal-debug.aar  dixim-android-player-secure-openmaxal.aar  dixim-android-util2-debug.aar  dixim-android-util2.aar
dTVTerminalApp/app/libs/arm64-v8a/curl/: libcurl.la
dTVTerminalApp/app/libs/armeabi-v7a/curl/: libcurl.la
dTVTerminalApp/app/libs/armeabi/curl/: libcurl.la
dTVTerminalApp/app/src/androidTest/java/com/dtvterminalapp/: ExampleInstrumentedTest.java
dTVTerminalApp/app/src/androidTest/java/proj/dtvterminalapp/: ExampleInstrumentedTest.java
dTVTerminalApp/app/src/main/: AndroidManifest.xml
dTVTerminalApp/app/src/main/assets/: first_pairing_d_account_help.html  first_pairing_help.html  osslicense.html  terms_of_service.html
dTVTerminalApp/app/src/main/assets/drm/conf/: capability.xml
dTVTerminalApp/app/src/main/assets/licenses/: oss_licenses.html
dTVTerminalApp/app/src/main/assets/pairing_help/: dRM-18-008.html
dTVTerminalApp/app/src/main/assets/pairing_help/css/: bundle.css
dTVTerminalApp/app/src/main/cpp/: dummy.cpp
dTVTerminalApp/app/src/main/cpp/dlna/: dav_avt.h  dav_capability_priority.h  dav_didl_object_array.h  dav_didl_object_property_array.h  dav_flags_param.h  dav_rcs.h  dcu_converter.h  dcu_converter_arib.h  dcu_detector.h  dcu_regex.h  dcu_regex_array.h  dcu_regex_match.h  dcu_regex_match_array.h  dcu_subdetector.h  digd_wanipc.h  dmedia_detector.h  dmedia_detector_os.h  dmedia_detector_target_array_os.h  dmedia_detector_target_os.h  dpd_urn.h  du_alloc.h  du_arp.h  du_arp_array.h  du_array.h  du_base64.h  du_bool_array.h  du_byte.h  du_caltime.h  du_csv.h  du_dir.h  du_dir_os.h  du_dlib.h  du_elapse.h  du_endian.h  du_env.h  du_file.h  du_file_input_buffer.h  du_file_os.h  du_file_output_buffer.h  du_float.h  (+83 more)
dTVTerminalApp/app/src/main/cpp/include/dixim/: actc_aux.h  check_wlan_wep.h  cipher_file.h  cipher_file_context_global.h  cipher_file_local_mode.h  cipher_file_source.h  cipher_file_source_chunked_file.h  cipher_file_source_file.h  cipher_file_uuid.h  dav_capability.h  dav_capability_cache.h  dav_capability_util.h  dav_cds.h  dav_cds_state_variable.h  dav_cds_state_variable_last_change.h  dav_content_features.h  dav_didl.h  dav_didl_object.h  dav_didl_parser_packed.h  dav_didl_resolution.h  dav_didl_search_syntax.h  dav_didl_search_syntax_array.h  dav_dlna_managed.h  dav_http.h  dav_op_param.h  dav_urn.h  dcu_converter.h  dcu_converter_arib.h  dcu_detector.h  dcu_regex.h  dcu_regex_array.h  dcu_regex_match.h  dcu_regex_match_array.h  ddtcp.h  ddtcp_constant.h  ddtcp_crypto.h  ddtcp_crypto_aes.h  ddtcp_crypto_ecc.h  ddtcp_crypto_rng.h  ddtcp_crypto_sha.h  (+185 more)
dTVTerminalApp/app/src/main/cpp/src/: Common.h  DTVTLogger.h  Dlna.cpp  Dlna.h  DlnaBSDigitalXmlParser.cpp  DlnaBSDigitalXmlParser.h  DlnaBase.cpp  DlnaBase.h  DlnaDefine.h  DlnaDevXmlParser.cpp  DlnaDevXmlParser.h  DlnaDmsBrowse.cpp  DlnaDmsBrowse.h  DlnaDownload.cpp  DlnaDownload.h  DlnaHikariChXmlParser.cpp  DlnaHikariChXmlParser.h  DlnaJniCast.cpp  DlnaMacro.h  DlnaManagerBridge.cpp  DlnaRecVideoXmlParser.cpp  DlnaRecVideoXmlParser.h  DlnaRemoteConnect.cpp  DlnaRemoteConnect.h  DlnaTerChXmlParser.cpp  DlnaTerChXmlParser.h  DlnaXmlContainer.cpp  DlnaXmlContainer.h  DlnaXmlParserBase.cpp  DlnaXmlParserBase.h  DmsInfo.c  DmsInfo.h  android_log_handler.c  android_log_handler.h
dTVTerminalApp/app/src/main/cpp/src/Browse/: browse.c  browse.h  dms_info.c  dms_info.h  soap.c  soap.h
dTVTerminalApp/app/src/main/cpp/src/DiRAG/: cds_browser.c  cds_browser.h  dmp_conf.c  dmp_conf.h  dmp_event_adapter.c  dmp_event_adapter.h  dvcdsc_device.c  dvcdsc_device.h  dvcdsc_device_array.c  dvcdsc_device_array.h  dvcdsc_icon.c  dvcdsc_icon.h  dvcdsc_parser.c  dvcdsc_parser.h  dvcdsc_service.c  dvcdsc_service.h
dTVTerminalApp/app/src/main/cpp/src/LocalRegistration/: local_registration.c  local_registration.h
dTVTerminalApp/app/src/main/cpp/src/download/: CommonDl.h  DlnaDownload.cpp  DlnaDownload.h  DlnaJniCastDl.cpp  dmspu_cipher_file.cc  dmspu_cipher_file.h  downloader.cc  downloader.h  dtcp.hpp
dTVTerminalApp/app/src/main/cpp/src/remote/: CommonRm.h  DlnaJniCastRm.cpp  DlnaRemote.cpp  DlnaRemote.h  cds_browser.c  dmp.c  dmp.h  (+31 more)
dTVTerminalApp/app/src/main/res/drawable/: app_info_icon_bg.xml  content_detail_channel_list_item_selector.xml  contents_provider_shape_corner.xml  contents_provider_shape_corner_blue.xml  contents_provider_shape_corner_dark_gray.xml  disable_indicating.xml  edit_channel_list_style.xml  indicating.xml  indicating_no.xml  my_ch_btn_selector.xml  my_ch_item_bottom_line.xml  program_end_gray.xml  program_missed_gray.xml  program_ng_black.xml  program_playing_gray.xml  program_rectangele_end.xml  program_rectangele_start.xml  program_start_gray.xml  rank_shape_corner.xml  rectangele.xml  rectangele_all.xml  rectangele_contents_detail.xml  rectangele_end.xml  rectangele_start.xml  rectangele_white.xml  remocon_close_selector.xml  remote_controller_play_in_round_style.xml  remote_controller_play_out_round_style.xml  remote_controller_round_style.xml  remote_viewpager_bottom_corner.xml  remote_watch_by_tv_bottom_corner.xml  remote_watch_by_tv_bottom_corner_d_anime.xml  remote_watch_by_tv_bottom_corner_dazn.xml  remote_watch_by_tv_bottom_corner_dtv.xml  remote_watch_by_tv_bottom_corner_dtvchannel_and_hikari.xml  remote_watch_by_tv_top_corner.xml  selector_btn_click_bg.xml  selector_home_more_arrow.xml  selector_my_ch_btn.xml  selector_my_ch_unregister_btn.xml  (+9 more)
dTVTerminalApp/app/src/main/res/values/: attrs.xml  bools.xml  colors.xml  dimens.xml  strings.xml  styles.xml
dTVTerminalApp/app/src/main/res/values-sw600dp/: bools.xml  dimens.xml
(+1427 files in other folders)
